# heroic-hydra

./: .pre-commit-config.yaml  Dockerfile  OBJECTIVES.md  README.md  built-in exceptions  changes.md  dev-requirements.txt  docker.md  error_system.py  error_thrower.py  hiarchy  main.py  pyproject.toml  tox.ini
.github/workflows/: lint.yaml
Client/: client.py
Documentation/: NOTICE.md  Objectives.md  README.md
client/: gui.py
game/: Game.py  Server.py  submissions_str.py  tests.py
server/: server.py  submission.py  user.py
server/test_submissions/: not_declared.py
src/: submission.py
src/client/: client.py  gui.py  login_gui.py
src/game/: Client.py  Server.py
src/server/: ET_Changes.md  Game.py  README.md  documentation_template_proposal.md  error_thrower.md  error_thrower.py  errors.json  point_hardness.py  security.md  security_config.py  server.py  submission.py  test_client.py  user.py
src/server/test_submissions/: no_error.py
src/test_submissions/: not_declared.py
tests/: easter_egg.py
tests/test_submissions/: DONTDELETE.txt  hack_attempt.py
